# aiidalab-epfl-lsmo

./: multistage_geo_opt_ddec.ipynb  setup.cfg  show_one_isotherm.ipynb  start.py
utils/mof_checker/: __init__.py
utils/mof_cleaner/: MOF_cleaner.py  PBC_functions.py  atomic.py  editor.py
