[metadata]
name = aiidalab-lsmo
version = 21.09.0
author = Aliaksandr Yakutovich
author_email = aliaksandr.yakutovich@epfl.ch
description = Package for the AiiDAlab LSMO app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lsmo-epfl/aiidalab-epfl-lsmo.git
project_urls =
		Bug Tracker = https://github.com/lsmo-epfl/aiidalab-epfl-lsmo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiida-core~=1.0
    aiida-lsmo~=1.0
    aiidalab-widgets-base~=1.0rc
    mofchecker~=0.9

