[metadata]
name = aiidalab-lsmo
version = 21.10.0
author = Aliaksandr Yakutovich
author_email = aliaksandr.yakutovich@epfl.ch
description = Package for the AiiDAlab LSMO app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lsmo-epfl/aiidalab-epfl-lsmo.git
project_urls =
    Bug Tracker = https://github.com/lsmo-epfl/aiidalab-epfl-lsmo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiida-core~=1.0
    aiida-lsmo~=1.0
    aiidalab-widgets-base~=1.0
    mofchecker~=0.9

[options.extras_require]
dev =
    pre-commit==2.11.1


[flake8]
# Adapted from: https://github.com/CasperWA/voila-optimade-client
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
